@@ -1,4 +1,5 @@
 4 Nov 2017
+add: missing lnag index
 remove: check for array index after changing to string
 fix: compare array when array does not exist
 fix: unset blocks not getting cached
